# grim-hyprland

./: .build.yml  .editorconfig  .gitignore  README.md  buffer.c  flake.nix  grim.1.scd  main.c  meson.build  output-layout.c  render.c
doc/: grim.1.scd  meson.build
include/: grim.h
protocol/: meson.build
